<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_contact_add_friends"
        android:layout_width="match_parent"
        android:layout_height="@dimen/jrmf_dimen_50"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/contact_add_friends" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_dialog_contact_create_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/jrmf_dimen_50"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/contact_create_group" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_dialog_contact_search_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/jrmf_dimen_50"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/contact_search_group" />

</LinearLayout>