<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextAppearance="@style/Toolbar.TitleText">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:gravity="center_vertical"
                android:minHeight="@dimen/action_bar_height"
                android:orientation="vertical"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/action_bar_right_clickable_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:text="@string/register"
                    android:textColor="@color/color_green_text_view_selector"
                    android:textSize="14sp" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="59dp"
                android:background="@drawable/logo"
                android:contentDescription="@string/empty" />

            <com.netease.nim.uikit.common.ui.widget.ClearableEditTextWithIcon
                android:id="@+id/edit_login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="74dp"
                android:background="@drawable/edittext_white_normal"
                android:drawablePadding="15dp"
                android:hint="@string/login_hint_phone"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/color_white_66ffffff"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

            <com.netease.nim.uikit.common.ui.widget.ClearableEditTextWithIcon
                android:id="@+id/edit_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_white_normal"
                android:drawablePadding="15dp"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/color_white_66ffffff"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/ll_captcha_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.netease.nim.uikit.common.ui.widget.ClearableEditTextWithIcon
                    android:id="@+id/edit_login_captcha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_white_normal"
                    android:drawablePadding="15dp"
                    android:hint="@string/login_hint_captcha"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/color_white_66ffffff"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_get_captcha"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_white_normal"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/get_captcha"
                    android:textColor="@drawable/register_tip_selector" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_login_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/login_by_password"
                android:textColor="@drawable/register_tip_selector"
                android:textSize="12sp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_btn_selector"
                android:onClick="onLogin"
                android:text="@string/login"
                android:textColor="@color/login_btn" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>